@@ -3,9 +3,11 @@
  */
 package fr.univlille.info.J2.main.application;
 
+//Runtime components
+//--module-path /home/iutinfo/ExternalJars/Jars/javafx-sdk-21/lib --add-modules=javafx.controls,javafx.media
 
 import fr.univlille.info.J2.main.management.Management;
-import fr.univlille.info.J2.main.utils.menuConception.DisplayValues;
+import fr.univlille.info.J2.main.utils.resources.DisplayValues;
 
 //--module-path /home/iutinfo/eclipse-workspace/Jars/javafx-sdk-21/lib --add-modules=javafx.controls
 
@@ -23,13 +25,14 @@ import javafx.stage.Stage;
  *
  */
 public class MonsterHunt extends Application{
+	static boolean finished = false;
 
 	public static void main(String[] args) {
 		launch();
 	}
+	
 	/**
      * Méthode de démarrage de l'application.
-     *
      * @param stage La scène principale de l'application.
      * @throws Exception Si une exception survient lors du démarrage de l'application.
      */
